welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var T:Array[Color]
            ^Array1:29: error: class Array takes type parameters
def getMondeLargeur( nb: Int, T:Array)
                                ^Array1:37: error: not found: value setBrosseCouleur
		setBrosseCouleur(T(c))
                ^Array1:45: error: class Array takes type parameters
def motif( nb: Int):Array = 
                    ^