welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var n = 0
	var a = 0
	var T:Array[Color]
	
	n = getMondeHauteur()
	
	
	
}

def getMondeHauteur():Int = 
{
	var c:Color = Color.red
	var nb = 0
	
	c = getCouleurSol()
	avance;
	while(getCouleurSol() != c)
	{
		avance;
		nb = nb + 1
	}
	return nb 
	
}

def getMondeLargeur( nb: Int, T:Array)
{
	var c = 1
	gauche; avance;droite;
	for (c <- 0 to nb)
	{
		
		avance;
		setBrosseCouleur(T(c))
		baisseBrosse
		leveBrosse
		
	}
	
}

def motif( nb: Int):Array = 
{
	var T = new Array[Color](nb)
	var tg = 1

	T(0) = getCouleurSol()
	avance;
	while(getCouleurSol() != T(0))
	{
		avance;
		T(tg) = getCouleurSol()
		tg = tg + 1 
	}
	return T 
	
}
